--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,10 @@ pandas = "*"
 numpy = "*"
 flask = "*"
 python-dotenv = "*"
+psycopg2 = "*"
+psycopg2-binary = "*"
+gunicorn = "*"
+flask-sqlalchemy = "*"
 
 [requires]
 python_version = "3.6"
